--- a/books/ad-adas-closed-loop/config.yaml
+++ b/books/ad-adas-closed-loop/config.yaml
@@ -5,71 +5,71 @@ price: 0
 published: true
 chapters:
   - preface
-  - 1_1_FromModelCentric_ToDataCentric
-  - 1_2_AD_ADAS_OverallStack
-  - 1_3_GlobalTrends_DataCentric_AD
-  - 1_4_DataOps_MLOps_Architecture_Overview
-  - 1_5_SevenStage_ClosedLoop_DataEngine
-  - 1_6_OutOfScope_Topics
-  - 2_1_ODD_and_UseCases
-  - 2_2_Fleet_Strategy_and_VehicleRoles
-  - 2_3_SensorConfiguration_Design
-  - 2_4_Calibration_and_QA
-  - 2_5_Onboard_SoftwareStack_and_LogFormat
-  - 2_6_EdgeTriggers_and_Sampling_Design
-  - 2_7_Onboard_DataQuality_Monitoring
-  - 2_8_Privacy_and_Regulations_at_Collection
-  - 2_9_Security_and_DataProtection
-  - 3_1_Upload_Paths_Design
-  - 3_2_Ingest_Pipeline
-  - 3_3_TimeSync_and_Timestamps_in_Storage
-  - 3_4_Normalization_and_Formats
-  - 3_5_Storage_Tiering_and_Lifecycle
-  - 3_6_DataLake_and_DB_Design
-  - 3_7_Metadata_and_Catalog
-  - 3_8_Governance_and_AccessControl
-  - 3_9_DataBrowser_and_Visualization
-  - 4_1_DataRequirements_from_Tasks_and_Metrics
-  - 4_2_DataCleansing_and_QualityGates
-  - 4_3_Sampling_and_Downsampling_Strategies
-  - 4_4_Anonymization_Pipeline
-  - 4_5_Format_Resampling_FeatureExtraction
-  - 4_6_DatasetSchema_and_Splits
-  - 4_7_SceneSearch_and_NL_Query
-  - 4_8_ActiveLearning_and_CoverageGap
-  - 4_9_SyntheticData_and_GenerativeModels
-  - 4_10_DataGovernance_and_DatasetApproval
-  - 5_1_LabelPolicy_and_Definition
-  - 5_2_AnnotationTools_and_Workflows
-  - 5_3_VLM_and_Foundation_for_Taxonomy_and_Mining
-  - 5_4_SemiAuto_Labeling_and_AI_Assist
-  - 5_5_SelfSupervised_PseudoWeakSupervision
-  - 5_6_QualityManagement_and_Metrics
-  - 5_7_Online_Relabeling_and_ContinuousLabeling
-  - 5_8_Security_and_Privacy_in_Labeling
-  - 6_1_Experiment_Management
-  - 6_2_TrainingData_Pipeline_Design
-  - 6_3_ModelArchitecture_Design
-  - 6_4_TrainingStrategies_and_Techniques
-  - 6_5_DistributedTraining_and_GPUCluster
-  - 6_6_ModelCompression_and_Optimization
-  - 6_7_TrainingPipeline_Orchestration
-  - 6_8_OfflineEval_and_RegressionTests
-  - 7_1_Eval_Sim_RealRoad_Relationships
-  - 7_2_ScenarioBased_Testing_and_DB
-  - 7_3_SceneGeneration_and_GenerativeModels
-  - 7_4_ClosedLoop_SiL_Architecture
-  - 7_5_WorldModel_Evaluation_and_Replay
-  - 7_6_TestScenario_Management_and_Coverage
-  - 7_7_VirtualECU_HiL_and_PostCompile_Eval
-  - 7_8_Report_Generation_and_Visualization
-  - 7_9_SafetyCase_and_Evidence
-  - 8_1_Model_and_Artifact_Management
-  - 8_2_RegressionTests_and_ReleaseGates
-  - 8_3_CICD_for_Vehicles
-  - 8_4_OTA_and_VIN_Based_Release
-  - 8_5_OnlineMonitoring_and_AnomalyDetection
-  - 8_6_Incidents_and_NearMiss_Collection
-  - 8_7_Feedback_to_DataOps
-  - 8_8_ModelRollback_and_FailSafe
-  - 8_9_Organization_Process_and_Compliance
+  - 1_1_frommodelcentric_todatacentric
+  - 1_2_ad_adas_overallstack
+  - 1_3_globaltrends_datacentric_ad
+  - 1_4_dataops_mlops_architecture_overview
+  - 1_5_sevenstage_closedloop_dataengine
+  - 1_6_outofscope_topics
+  - 2_1_odd_and_usecases
+  - 2_2_fleet_strategy_and_vehicleroles
+  - 2_3_sensorconfiguration_design
+  - 2_4_calibration_and_qa
+  - 2_5_onboard_softwarestack_and_logformat
+  - 2_6_edgetriggers_and_sampling_design
+  - 2_7_onboard_dataquality_monitoring
+  - 2_8_privacy_and_regulations_at_collection
+  - 2_9_security_and_dataprotection
+  - 3_1_upload_paths_design
+  - 3_2_ingest_pipeline
+  - 3_3_timesync_and_timestamps_in_storage
+  - 3_4_normalization_and_formats
+  - 3_5_storage_tiering_and_lifecycle
+  - 3_6_datalake_and_db_design
+  - 3_7_metadata_and_catalog
+  - 3_8_governance_and_accesscontrol
+  - 3_9_databrowser_and_visualization
+  - 4_1_datarequirements_from_tasks_and_metrics
+  - 4_2_datacleansing_and_qualitygates
+  - 4_3_sampling_and_downsampling_strategies
+  - 4_4_anonymization_pipeline
+  - 4_5_format_resampling_featureextraction
+  - 4_6_datasetschema_and_splits
+  - 4_7_scenesearch_and_nl_query
+  - 4_8_activelearning_and_coveragegap
+  - 4_9_syntheticdata_and_generativemodels
+  - 4_10_datagovernance_and_datasetapproval
+  - 5_1_labelpolicy_and_definition
+  - 5_2_annotationtools_and_workflows
+  - 5_3_vlm_and_foundation_for_taxonomy_and_mining
+  - 5_4_semiauto_labeling_and_ai_assist
+  - 5_5_selfsupervised_pseudoweaksupervision
+  - 5_6_qualitymanagement_and_metrics
+  - 5_7_online_relabeling_and_continuouslabeling
+  - 5_8_security_and_privacy_in_labeling
+  - 6_1_experiment_management
+  - 6_2_trainingdata_pipeline_design
+  - 6_3_modelarchitecture_design
+  - 6_4_trainingstrategies_and_techniques
+  - 6_5_distributedtraining_and_gpucluster
+  - 6_6_modelcompression_and_optimization
+  - 6_7_trainingpipeline_orchestration
+  - 6_8_offlineeval_and_regressiontests
+  - 7_1_eval_sim_realroad_relationships
+  - 7_2_scenariobased_testing_and_db
+  - 7_3_scenegeneration_and_generativemodels
+  - 7_4_closedloop_sil_architecture
+  - 7_5_worldmodel_evaluation_and_replay
+  - 7_6_testscenario_management_and_coverage
+  - 7_7_virtualecu_hil_and_postcompile_eval
+  - 7_8_report_generation_and_visualization
+  - 7_9_safetycase_and_evidence
+  - 8_1_model_and_artifact_management
+  - 8_2_regressiontests_and_releasegates
+  - 8_3_cicd_for_vehicles
+  - 8_4_ota_and_vin_based_release
+  - 8_5_onlinemonitoring_and_anomalydetection
+  - 8_6_incidents_and_nearmiss_collection
+  - 8_7_feedback_to_dataops
+  - 8_8_modelrollback_and_failsafe
+  - 8_9_organization_process_and_compliance
